# EmotionSpeak

./: .flake8  .gitignore  LICENSE  Makefile  README.md  init.py  main.py  pyproject.toml  requirements.txt  start.bat  venv.bat
.github/workflows/: ci.yml  python-app.yml
data/dicts/: boson.json  hownet.json  ntusd.json  thu.json
data/sample_texts/: mixed.txt  negative.txt  neutral.txt  positive.txt
docs/: API文档.md  sentiment_analysis.md  情感分析说明.md  用户指南.md
scripts/: demo.py  download_models.py  setup.py
src/: init_resources.py
src/core/: __init__.py  audio_player.py  config.py  sentiment_analysis.py  sentiment_analyzer.py  sentiment_pipeline.py  text_pipeline.py  text_processor.py  tokenizer.py  tts_edge.py  tts_engine.py
src/core/sentiment/: __init__.py  analyzer.py  base.py  dict_loader.py  tokenizer.py
src/gui/: components.py  main_window.py
src/utils/: config.py  helpers.py
src/visualization/: sentiment_plot.py  sentiment_plot_view.py  wordcloud_gen.py  wordcloud_view.py
src/webapp/: __init__.py  app.py  config.py  routes.py  utils.py
src/webapp/routes/: __init__.py  api.py
src/webapp/static/css/: style.css
src/webapp/static/js/: main.js
src/webapp/templates/: index.html
tests/: conftest.py  test_audio_player.py  test_config.py  test_sentiment_analyzer.py  test_text_processor.py  test_tts_engine.py
