[tool.poetry]
name = "EmotionSpeak"
version = "0.1.0"
description = "情感语音表达与可视化工具"
authors = ["Your Name <your.email@example.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.8,<3.12"
pyttsx3 = ">=2.90"
textblob = ">=0.17.1"
nltk = ">=3.8"
pygame = ">=2.1.0"
wordcloud = ">=1.9.2"
matplotlib = ">=3.6.0"
pillow = ">=9.0.0"
jieba = ">=0.42.1"

[tool.poetry.dev-dependencies]
pytest = ">=7.0.0"
pytest-cov = ">=4.0.0"
black = ">=22.0.0"
flake8 = ">=5.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
target-version = ['py38']

[tool.flake8]
max-line-length = 88
exclude = [".git", "__pycache__", "build", "dist", "data/output"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "--verbose --cov=src --cov-report=html --cov-report=term-missing"
minversion = "6.0"
